Fixed css overflow issue

--- a/BlazorComponents.Publish/wwwroot/_content/Components.ModalDialog/Components.ModalDialog.bundle.scp.css
+++ b/BlazorComponents.Publish/wwwroot/_content/Components.ModalDialog/Components.ModalDialog.bundle.scp.css
@@ -3,7 +3,7 @@
 	position: absolute;
 	top: 0;
 	left: 0;
-	width: 100vw;
+	width: calc(100vw - 20px);
 	min-height: 100vh;
 	background-color: rgba(31, 41, 55, 0.5);
 	display: flex;
@@ -48,7 +48,7 @@
 	cursor: pointer;
 }
 
-.modal-close:hover[b-7eu3cworgi]{
+.modal-close:hover[b-7eu3cworgi] {
 	box-shadow: 0 3px 10px rgb(0 0 0 / 0.2);
 }
 
@@ -74,8 +74,8 @@
 	cursor: pointer;
 }
 
-.modal-footer > button[b-7eu3cworgi]{
-    box-shadow: 0 3px 10px rgb(0 0 0 / 0.2);
+.modal-footer > button[b-7eu3cworgi] {
+	box-shadow: 0 3px 10px rgb(0 0 0 / 0.2);
 }
 
 .modal-footer > .modal-footer-close[b-7eu3cworgi] {
